--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,6 +85,7 @@
         android:layout_marginEnd="32dp"
         android:src="@drawable/ic_baseline_camera_enhance_24"
         app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal3"
+        android:contentDescription="@string/logo_aplikasi"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal" />
