--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -9,9 +9,9 @@
     <ImageView
         android:id="@+id/img_item_photo"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_height="0dp"
+        android:layout_marginVertical="100dp"
+        android:transitionName="gambar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,6 +25,7 @@
         android:layout_toEndOf="@id/img_item_photo"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:transitionName="username"
         app:layout_constraintEnd_toEndOf="@id/img_item_photo"
         app:layout_constraintStart_toStartOf="@+id/img_item_photo"
         app:layout_constraintTop_toBottomOf="@+id/img_item_photo"
@@ -36,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:ellipsize="end"
+        android:transitionName="desc"
         android:maxLines="5"
         app:layout_constraintEnd_toEndOf="@+id/tv_item_username"
         app:layout_constraintStart_toStartOf="@+id/tv_item_username"
@@ -49,6 +51,7 @@
         android:layout_toEndOf="@id/img_item_photo"
         android:textSize="14sp"
         android:textStyle="italic"
+        android:transitionName="date"
         app:layout_constraintStart_toStartOf="@id/img_item_photo"
         app:layout_constraintTop_toBottomOf="@+id/tv_item_desc"
         tools:text="2022-01-08" />
