--- a/app/src/main/res/layout/story_item.xml
+++ b/app/src/main/res/layout/story_item.xml
@@ -19,7 +19,7 @@
         <ImageView
             android:id="@+id/img_item_photo"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp"
             card_view:layout_constraintStart_toStartOf="parent"
