--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -13,6 +13,7 @@
         android:layout_marginVertical="100dp"
         android:transitionName="gambar"
         app:layout_constraintStart_toStartOf="parent"
+        android:contentDescription="@string/story_pengguna"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -23,6 +24,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/img_item_photo"
+        android:layout_marginHorizontal="10dp"
         android:textSize="18sp"
         android:textStyle="bold"
         android:transitionName="username"
@@ -52,7 +54,7 @@
         android:textSize="14sp"
         android:textStyle="italic"
         android:transitionName="date"
-        app:layout_constraintStart_toStartOf="@id/img_item_photo"
+        app:layout_constraintStart_toStartOf="@id/tv_item_username"
         app:layout_constraintTop_toBottomOf="@+id/tv_item_desc"
         tools:text="2022-01-08" />
 
