--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -66,6 +66,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:inputType="textEmailAddress"
+        android:hint="abcd@mail.com"
         android:maxLines="1"
         android:lines="1"
         android:drawableStart="@drawable/ic_baseline_email_24"
@@ -129,7 +130,7 @@
         app:layout_constraintTop_toBottomOf="@id/signupCheck"
         app:layout_constraintStart_toStartOf="parent"
         android:textStyle="bold"
-        android:textColor="@color/purple_500"
+        android:textColor="@color/green_500"
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <androidx.constraintlayout.widget.Guideline
