--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -2,7 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <group android:menuCategory="container">
-        <item android:id="@+id/menu1"
+        <item android:id="@+id/btnMaps"
+            android:title="@string/maps"
+            android:icon = "@drawable/ic_baseline_map_24"
+            app:showAsAction="ifRoom" />
+        <item android:id="@+id/btnKeluar"
             android:title="@string/logout"
             android:icon = "@drawable/ic_baseline_logout_24"
             app:showAsAction="always" />
